--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -44,7 +44,7 @@ VPATH            = @srcdir@
 include $(DEPTH)/config/autoconf.mk
 
 MODULE		= crashme
-DIRS            = public src
+DIRS            = src
 
 XPI_NAME	= crashme
 INSTALL_EXTENSION_ID = crashme@ted.mielczarek.org
@@ -52,5 +52,6 @@ XPI_PKGNAME	= crashme
 USE_EXTENSION_MANIFEST = 1
 
 DIST_FILES = install.rdf
+EXTRA_JS_MODULES = Crasher.jsm
 
 include $(topsrcdir)/config/rules.mk
