--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -53,22 +53,12 @@ LIBRARY_NAME	= crashme
 
 XPI_NAME	= crashme
 
-EXPORT_LIBRARY	= 0
-IS_COMPONENT	= 1
-MODULE_NAME	= nsCrashmeModule
-GRE_MODULE	= 1
+EXPORT_LIBRARY	=
 BUILD_STATIC_LIBS =
 
 USE_STATIC_LIBS = 1
 
-#XXX: slim this down
-REQUIRES	= \
-		xpcom \
-		xpconnect \
-		$(NULL)
-
 CPPSRCS		= \
-  nsCrashmeModule.cpp \
   nsCrasher.cpp \
   $(NULL)
 
@@ -78,16 +68,12 @@ CMMSRCS         = \
   $(NULL)
 endif
 
-EXTRA_COMPONENTS = nsCrashmeCommandLine.js
-
-DEFINES += -DXPCOM_GLUE -DXPCOM_GLUE_USE_NSPR
-
-EXTRA_DSO_LIBS += xpcom
+EXTRA_COMPONENTS = \
+  nsCrashmeCommandLine.js \
+  crashme.manifest \
+  $(NULL)
 
 include $(topsrcdir)/config/rules.mk
 
 LOCAL_INCLUDES	+= -I$(srcdir)
 
-EXTRA_DSO_LIBS += $(NSPR_LIBS)
-
-EXTRA_DSO_LDOPTS += $(LIBS_DIR) $(EXTRA_DSO_LIBS) $(XPCOM_GLUE_LDOPTS)
