--- a/trunk/src/Makefile.in
+++ b/trunk/src/Makefile.in
@@ -77,3 +77,7 @@ include $(topsrcdir)/config/rules.mk
 
 LOCAL_INCLUDES	+= -I$(srcdir)
 
+ifeq ($(OS_TARGET),WINNT)
+# path of least resistance
+EXTRA_LIBS += $(call EXPAND_MOZLIBNAME,mozalloc)
+endif
